Upgrade some code to Java 17 level